entire page overflow issue fixed

--- a/styles.scss
+++ b/styles.scss
@@ -6,11 +6,14 @@ $white: #EBEBEB;
 $heading-font: 'Saira Semi Condensed', sans-serif;
 $paragraph-font: 'JetBrains Mono', sans-serif;
 
+
 body {
     font-family: $paragraph-font;
     background-color: $secondary-color;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    
 }
 
 .light {
@@ -77,7 +80,9 @@ section {
     min-height: 100vh;
     padding-left: 10%;
     padding-right: 10%;
+
 }
+
 
 .section-container-large {
     padding-top: 4rem;
@@ -175,8 +180,9 @@ section {
         margin-bottom: 1rem;
     }
 
-    .thumbnail-slider .slick-list {
-        overflow: visible;
+
+    .thumbnail-slider .slick-list{
+        overflow: hidden;
     }
 
     .thumbnail-slider .slick-slide {
@@ -187,6 +193,7 @@ section {
         margin-right: 2rem;
         text-align: center;
         font-size: 1.5rem;
+
     }
 
     .thumbnail-slider .slick-current {
